--- a/app/src/main/res/navigation/nav_graph_ioc.xml
+++ b/app/src/main/res/navigation/nav_graph_ioc.xml
@@ -3,14 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_room"
-    app:startDestination="@id/roomListFragment">
+    app:startDestination="@id/iocListFragment">
 
     <fragment
-        android:id="@+id/roomListFragment"
+        android:id="@+id/iocListFragment"
         android:name="com.xxh.jetpacksample.ioc.IocListFragment"
         tools:layout="@layout/content_list"
         android:label="IocListFragment" >
 
+
+        <action
+            android:id="@+id/action_iocListFragment_to_buttonsFragment"
+            app:destination="@id/buttonsFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/buttonsFragment"
+        android:name="com.xxh.jetpacksample.ioc.hilt.codelab.logs.ui.ButtonsFragment"
+        tools:layout="@layout/fragment_buttons"
+        android:label="ButtonsFragment" >
+        <action
+            android:id="@+id/action_buttonsFragment_to_logsFragment"
+            app:destination="@id/logsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/logsFragment"
+        android:name="com.xxh.jetpacksample.ioc.hilt.codelab.logs.ui.LogsFragment"
+        tools:layout="@layout/fragment_logs"
+        android:label="LogsFragment" />
 
 </navigation>
